deployment/deployment.yaml
# my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  selector:
    matchLabels:
      app: testk8s-app
  replicas: 1
  template:
    metadata:
      labels:
        app: testk8s-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: node-app
        image: docker.io/npinkam/testk8s:latest
        ports:
        - containerPort: 3000
          name: metrics
